--- a/articles/virtual-machines/troubleshooting/index.yml
+++ b/articles/virtual-machines/troubleshooting/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: genlin
   ms.author: genli
   ms.date: 09/09/2019
-  ms.openlocfilehash: 24f3dbc550f04d9b25c1c15e2878523c1a3df805
-  ms.sourcegitcommit: 271601d3eeeb9422e36353d32d57bd6e331f4d7b
+  ms.openlocfilehash: df855334f91899ab23625f7161792d0bec416782
+  ms.sourcegitcommit: d39f2cd3e0b917b351046112ef1b8dc240a47a4f
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/20/2020
-  ms.locfileid: "88651023"
+  ms.lasthandoff: 08/25/2020
+  ms.locfileid: "88816594"
 landingContent:
 - title: 排查部署失败问题
   linkLists:
@@ -104,7 +104,7 @@ landingContent:
   - linkListType: how-to-guide
     links:
     - text: 虚拟磁盘常见问题解答
-      url: ../windows/faq-for-disks.md
+      url: ../faq-for-disks.md
     - text: 排查在调整 VM 大小时出现的分配失败问题
       url: ./allocation-failure.md
     - text: 了解 VM 上的临时驱动器
