--- a/articles/virtual-machines/troubleshooting/linux-index.yml
+++ b/articles/virtual-machines/troubleshooting/linux-index.yml
@@ -10,12 +10,12 @@ metadata:
   author: genlin
   ms.author: genli
   ms.date: 09/09/2019
-  ms.openlocfilehash: 78310d35361a3c34992e9fb3f08d8432b4ec4fb8
-  ms.sourcegitcommit: 271601d3eeeb9422e36353d32d57bd6e331f4d7b
+  ms.openlocfilehash: 7367bc378cf2a271d69d78cd08c4d1252b11fd62
+  ms.sourcegitcommit: d39f2cd3e0b917b351046112ef1b8dc240a47a4f
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/20/2020
-  ms.locfileid: "88650518"
+  ms.lasthandoff: 08/25/2020
+  ms.locfileid: "88816382"
 landingContent:
 - title: 排查部署失败问题
   linkLists:
@@ -88,7 +88,7 @@ landingContent:
   - linkListType: how-to-guide
     links:
     - text: 虚拟磁盘常见问题解答
-      url: ../linux/faq-for-disks.md
+      url: ../faq-for-disks.md
     - text: 排查在调整 VM 大小时出现的分配失败问题
       url: ./allocation-failure.md
     - text: 了解 VM 上的临时驱动器
