--- a/articles/machine-learning/algorithm-module-reference/toc.yml
+++ b/articles/machine-learning/algorithm-module-reference/toc.yml
@@ -192,3 +192,5 @@
       href: web-service-input-output.md
 - name: 模块错误和故障排除
   href: designer-error-codes.md
+- name: Graph 搜索查询语法
+  href: graph-search-syntax.md
