--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -23,7 +23,7 @@
       href: storage-sync-files-extend-servers.md
 - name: 概念
   items:
-    - name: Azure 文件存储
+    - name: Azure 文件
       items:
         - name: 规划 Azure 文件部署
           href: storage-files-planning.md
@@ -296,12 +296,12 @@
       href: 'https://azure.microsoft.com/updates/?category=storage'
     - name: Azure 文件同步发行说明
       href: storage-files-release-notes.md
-    - name: Azure 存储论坛
-      href: 'https://docs.microsoft.com/answers/products/azure?product=storage'
+    - name: Microsoft Q&A 上的 Azure 存储
+      href: 'https://docs.microsoft.com/answers/topics/azure-files.html'
     - name: Stack Overflow 上的 Azure 存储
       href: 'https://stackoverflow.com/questions/tagged/windows-azure-storage'
-    - name: Azure 存储的定价
-      href: 'https://azure.microsoft.com/pricing/details/storage/'
+    - name: Azure 文件存储的定价
+      href: 'https://azure.microsoft.com/pricing/details/storage/files/'
     - name: Azure 定价计算器
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: 视频
