--- a/articles/governance/resource-graph/toc.yml
+++ b/articles/governance/resource-graph/toc.yml
@@ -82,30 +82,34 @@
   href: ./troubleshoot/general.md
 - name: 参考
   items:
-    - name: Azure CLI
-      href: /cli/azure/ext/resource-graph/graph
-    - name: Azure PowerShell
-      href: /powershell/module/az.resourcegraph/
-    - name: 用于 .NET 的 Azure SDK
-      href: /dotnet/api/Microsoft.Azure.Management.ResourceGraph
-    - name: 用于 .NET 的 Azure SDK (NuGet)
-      href: 'https://www.nuget.org/packages/Microsoft.Azure.Management.ResourceGraph/'
-    - name: Azure SDK for Go
-      href: 'https://godoc.org/github.com/Azure/azure-sdk-for-go/services/resourcegraph/mgmt/2019-04-01/resourcegraph'
-    - name: 用于 Java 的 Azure SDK
-      href: /java/api/overview/azure/resourcegraph/management?view=azure-java-stable
-    - name: 用于 Java 的 Azure SDK (Maven)
-      href: 'https://search.maven.org/artifact/com.microsoft.azure.resourcegraph.v2019_04_01/azure-mgmt-resourcegraph/1.0.0-beta/jar'
-    - name: 用于 JavaScript 的 Azure SDK
-      href: /javascript/api/@azure/arm-resourcegraph
-    - name: 用于 Python 的 Azure SDK
-      href: /python/api/azure-mgmt-resourcegraph/azure.mgmt.resourcegraph
-    - name: 用于 Ruby 的 Azure SDK (Gem)
-      href: 'https://rubygems.org/gems/azure_mgmt_resourcegraph'
-    - name: REST
-      href: /rest/api/azure-resourcegraph/
-    - name: OpenAPI
-      href: 'https://github.com/Azure/azure-rest-api-specs/tree/master/specification/resourcegraph/resource-manager/Microsoft.ResourceGraph/stable/2019-04-01'
+    - name: 键盘快捷方式
+      href: ./reference/keyboard-shortcuts.md
+    - name: CLI 和 SDK
+      items:
+        - name: Azure CLI
+          href: /cli/azure/ext/resource-graph/graph
+        - name: Azure PowerShell
+          href: /powershell/module/az.resourcegraph/
+        - name: 用于 .NET 的 Azure SDK
+          href: /dotnet/api/Microsoft.Azure.Management.ResourceGraph
+        - name: 用于 .NET 的 Azure SDK (NuGet)
+          href: 'https://www.nuget.org/packages/Microsoft.Azure.Management.ResourceGraph/'
+        - name: Azure SDK for Go
+          href: 'https://godoc.org/github.com/Azure/azure-sdk-for-go/services/resourcegraph/mgmt/2019-04-01/resourcegraph'
+        - name: 用于 Java 的 Azure SDK
+          href: /java/api/overview/azure/resourcegraph/management?view=azure-java-stable
+        - name: 用于 Java 的 Azure SDK (Maven)
+          href: 'https://search.maven.org/artifact/com.microsoft.azure.resourcegraph.v2019_04_01/azure-mgmt-resourcegraph/1.0.0-beta/jar'
+        - name: 用于 JavaScript 的 Azure SDK
+          href: /javascript/api/@azure/arm-resourcegraph
+        - name: 用于 Python 的 Azure SDK
+          href: /python/api/azure-mgmt-resourcegraph/azure.mgmt.resourcegraph
+        - name: 用于 Ruby 的 Azure SDK (Gem)
+          href: 'https://rubygems.org/gems/azure_mgmt_resourcegraph'
+        - name: REST
+          href: /rest/api/azure-resourcegraph/
+        - name: OpenAPI
+          href: 'https://github.com/Azure/azure-rest-api-specs/tree/master/specification/resourcegraph/resource-manager/Microsoft.ResourceGraph/stable/2019-04-01'
     - name: 资源管理器模板
       href: /azure/templates/microsoft.resourcegraph/allversions
     - name: Resource Graph 表和资源类型
