--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -16,6 +16,8 @@
       href: quickstart-load-balancer-standard-public-template.md
     - name: 创建内部负载均衡器 - 门户
       href: quickstart-load-balancer-standard-internal-portal.md
+    - name: 创建内部负载均衡器 - Azure CLI
+      href: quickstart-load-balancer-standard-internal-cli.md
   expanded: true
 - name: 教程
   items:
