--- a/articles/storage/tables/TOC.yml
+++ b/articles/storage/tables/TOC.yml
@@ -151,10 +151,22 @@
           href: 'https://docs.microsoft.com/previous-versions/azure/storage/storage-use-azcopy'
         - name: Linux 上的 AzCopy (v8)
           href: 'https://docs.microsoft.com/previous-versions/azure/storage/storage-use-azcopy-linux'
-    - name: 故障排除
+    - name: 疑难解答
       items:
         - name: 延迟问题
           href: ../common/troubleshoot-latency-storage-analytics-logs.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+- name: 资源
+  items:
+    - name: Azure 更新
+      href: 'https://azure.microsoft.com/updates/?product=storage'
+    - name: Microsoft Q&A 上的 Azure 存储
+      href: 'https://docs.microsoft.com/answers/topics/azure-table-storage.html'
+    - name: Stack Overflow 上的 Azure 存储
+      href: 'https://stackoverflow.com/questions/tagged/windows-azure-storage'
+    - name: 表存储的定价
+      href: 'https://azure.microsoft.com/en-us/pricing/details/storage/tables/'
+    - name: Azure 定价计算器
+      href: 'https://azure.microsoft.com/pricing/calculator/'
 - name: 参考
   items:
     - name: 可伸缩性和性能目标
