--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -110,7 +110,7 @@
       href: stream-analytics-window-functions.md
     - name: 地理空间函数
       href: stream-analytics-geospatial-functions.md
-    - name: 兼容性级别
+    - name: 兼容级别
       href: stream-analytics-compatibility-level.md
     - name: 通用查询模式
       href: stream-analytics-stream-analytics-query-patterns.md
@@ -172,6 +172,8 @@
           href: stream-analytics-real-time-fraud-detection.md
         - name: 在 IoT Edge 上运行作业
           href: stream-analytics-edge.md
+        - name: 在 Azure Stack 上运行作业
+          href: on-azure-stack.md
         - name: 收费站传感器数据分析
           href: stream-analytics-build-an-iot-solution-using-stream-analytics.md
         - name: 高频交易
