--- a/articles/cosmos-db/index.yml
+++ b/articles/cosmos-db/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: SnehaGunda
   ms.author: sngun
   ms.date: 09/10/2019
-  ms.openlocfilehash: b99ded362ea366222a656d9c127defc63ff6b37b
-  ms.sourcegitcommit: 69156ae3c1e22cc570dda7f7234145c8226cc162
+  ms.openlocfilehash: b96e1dcc29afdfa7ed6ead8a77a43e7ac4ab617a
+  ms.sourcegitcommit: b33c9ad17598d7e4d66fe11d511daa78b4b8b330
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/03/2020
-  ms.locfileid: "84309792"
+  ms.lasthandoff: 08/25/2020
+  ms.locfileid: "88854813"
 landingContent:
 - title: 关于 Azure Cosmos DB
   linkLists:
@@ -306,17 +306,17 @@ landingContent:
       url: cassandra-migrate-cosmos-db-blitzz.md
     - text: 迁移 100 TB 的数据
       url: migrate-cosmosdb-data.md
-- title: 将内置分析功能与 Apache Spark 配合使用
+- title: 使用 Azure Synapse Link 进行分析
   linkLists:
   - linkListType: concept
     links:
-    - text: 分析用例
-      url: analytics-usecases.md
-    - text: Lambda 架构
-      url: lambda-architecture.md
+    - text: Synapse Link for Azure Cosmos DB
+      url: synapse-link.md
+    - text: Azure Cosmos DB 分析存储
+      url: analytical-store-introduction.md
+    - text: Synapse Link 用例
+      url: synapse-link-use-cases.md
   - linkListType: how-to-guide
     links:
-    - text: 使用 Cosmos DB 到 Spark 的连接器
-      url: spark-connector.md
-    - text: 将 Cosmos DB 与 Apache Kafka 配合使用
-      url: /azure/hdinsight/apache-kafka-spark-structured-streaming-cosmosdb
+    - text: 配置 Azure Synapse Link
+      url: configure-synapse-link.md
