--- a/articles/azure-arc/index.yml
+++ b/articles/azure-arc/index.yml
@@ -1,68 +1,87 @@
-### YamlMime:Landing
-title: Azure Arc
-summary: Azure Arc 将 Azure 资源管理器功能扩展到 Linux 和 Windows 服务器，以及跨本地、多云和边缘的任何基础结构上的 Kubernetes 群集。 借助 Azure Arc，客户还可以在任何地方运行 Azure 数据服务，从而实现云创新的优势，包括始终提供最新数据的功能、几秒钟（而不是几小时）内完成的部署以及任何基础结构的动态可扩展性。
+### YamlMime:Hub
+title: Azure Arc 文档
+summary: 跨本地、边缘和多云简化复杂的分布式环境。
+brand: azure
 metadata:
   title: Azure Arc
-  description: 了解如何管理 Azure 中的本地计算机
-  author: mgoedtel
+  description: 了解如何部署资源来跨本地、边缘和多云简化复杂的分布式环境。 通过 Azure Arc，可随处部署 Azure 服务，它还将 Azure 管理扩展到任意基础结构。
   ms.service: azure-arc
-  ms.topic: landing-page
-  ms.date: 08/13/2020
+  ms.topic: hub-page
+  author: MGoedtel
   ms.author: magoedte
-  ms.openlocfilehash: afb1dd4986220bcf3f244532a730faf6b80e6074
-  ms.sourcegitcommit: 4913da04fd0f3cf7710ec08d0c1867b62c2effe7
+  ms.date: 08/21/2020
+  ms.openlocfilehash: 961d8b892841f2d8761053279f053afe3b859798
+  ms.sourcegitcommit: e2b36c60a53904ecf3b99b3f1d36be00fbde24fb
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/14/2020
-  ms.locfileid: "88212783"
-landingContent:
-- title: 关于 Azure Arc
-  linkLists:
-  - linkListType: overview
+  ms.lasthandoff: 08/24/2020
+  ms.locfileid: "88763316"
+highlightedContent:
+  items:
+  - title: 启用了 Azure Arc 的服务器（预览版）
+    itemType: overview
+    url: ./servers/overview.md
+  - title: 启用了 Azure Arc 的 Kubernetes（预览版）
+    itemType: overview
+    url: ./kubernetes/overview.md
+  - title: 关于 Azure Arc
+    itemType: overview
+    url: https://azure.microsoft.com/en-us/services/azure-arc
+productDirectory:
+  title: 已启用 Azure Arc 的服务
+  summary: 查看如何随处运行服务。
+  items:
+  - title: 已启用 Azure Arc 的服务器
+    imageSrc: ./media/manage-450-machines-azure-arc.svg
     links:
-    - text: 什么是 Azure Arc？
-      url: https://aka.ms/Azure-Arc-Info
-- title: 使用已启用 Azure Arc 的服务器将计算机连接到 Azure
-  linkLists:
-  - linkListType: overview
+    - url: ./servers/onboard-portal.md
+      text: 从 Azure 门户将计算机连接到 Azure Arc
+    - url: ./servers/onboard-service-principal.md
+      text: 使用服务主体大规模连接计算机
+    - url: ./servers/onboard-dsc.md
+      text: 通过 PowerShell DSC 将计算机连接到 Azure
+    - url: ./servers/index.yml
+      text: 查看更多…
+  - title: 已启用 Azure Arc 的 Kubernetes
+    imageSrc: ./media/containers-101-kubernetes-services.svg
     links:
-    - text: 什么是已启用 Azure Arc 的服务器？
-      url: ./servers/overview.md
-  - linkListType: quickstart
+    - url: ./kubernetes/connect-cluster.md
+      text: 连接群集
+    - url: ./kubernetes/use-gitops-connected-cluster.md
+      text: 使用 GitOps 部署配置
+    - url: ./kubernetes/index.yml
+      text: 查看更多…
+conceptualContent:
+  title: 入门
+  items:
+  - title: 启用了 Azure Arc 的服务器（预览版）
     links:
-    - text: 启用支持 Arc 的服务器代理
-      url: ./servers/learn/quick-enable-hybrid-vm.md
-  - linkListType: how-to-guide
+    - url: ./servers/learn/quick-enable-hybrid-vm.md
+      itemType: get-started
+      text: 启用支持 Arc 的服务器代理
+    - url: ./servers/learn/tutorial-enable-vm-insights.md
+      itemType: tutorial
+      text: 通过用于 VM 的 Azure Monitor 的监视混合计算机
+    - url: ./servers/policy-samples.md
+      itemType: learn
+      text: 使用 Azure Policy 的许可控制策略
+    - url: ./servers/manage-vm-extensions.md
+      itemType: how-to-guide
+      text: 管理和使用 Azure VM 扩展
+  - title: 启用了 Azure Arc 的 Kubernetes（预览版）
     links:
-    - text: 从 Azure 门户将计算机连接到 Azure Arc
-      url: ./servers/onboard-portal.md
-    - text: 使用服务主体大规模连接计算机
-      url: ./servers/onboard-service-principal.md
-    - text: 通过 PowerShell DSC 将计算机连接到 Azure
-      url: ./servers/onboard-dsc.md
-    - text: 管理和使用 Azure VM 扩展
-      url: ./servers/manage-vm-extensions.md
-- title: 使用 Azure Arc 将 Kubernetes 群集连接到 Azure
-  linkLists:
-  - linkListType: overview
-    links:
-    - text: 什么是已启用 Azure Arc 的 Kubernetes？
-      url: ./kubernetes/overview.md
-  - linkListType: quickstart
-    links:
-    - text: 连接群集
-      url: ./kubernetes/connect-cluster.md
-  - linkListType: how-to-guide
-    links:
-    - text: 使用 GitOps 部署配置
-      url: ./kubernetes/use-gitops-connected-cluster.md
-    - text: 使用 GitOps 部署 Helm 图表
-      url: ./kubernetes/use-gitops-with-helm.md
-    - text: 通过 Azure Policy 强制使用 GitOps
-      url: ./kubernetes/use-azure-policy.md
-    - text: 用适用于容器的 Azure Monitor 进行监视
-      url: ../azure-monitor/insights/container-insights-enable-arc-enabled-clusters.md?toc=/azure/azure-arc/toc.json
-    - text: 使用 Azure Policy 的许可控制策略
-      url: ../governance/policy/concepts/policy-for-kubernetes.md?toc=/azure/azure-arc/toc.json
-    - text: 部署 Azure IoT Edge 工作负载
-      url: ./kubernetes/deploy-azure-iot-edge-workloads.md
+    - url: ./kubernetes/use-gitops-with-helm.md
+      itemType: deploy
+      text: 使用 GitOps 部署 Helm 图表
+    - url: ./kubernetes/use-azure-policy.md
+      itemType: how-to-guide
+      text: 通过 Azure Policy 强制使用 GitOps
+    - url: ../azure-monitor/insights/container-insights-enable-arc-enabled-clusters.md?toc=/azure/azure-arc/toc.json
+      itemType: tutorial
+      text: 用适用于容器的 Azure Monitor 进行监视
+    - url: ../governance/policy/concepts/policy-for-kubernetes.md?toc=/azure/azure-arc/toc.json
+      itemType: learn
+      text: 使用 Azure Policy 的许可控制策略
+    - url: ./kubernetes/deploy-azure-iot-edge-workloads.md
+      itemType: deploy
+      text: 部署 Azure IoT Edge 工作负载
