--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -79,15 +79,15 @@
 - name: 示例
   items:
     - name: C# 示例
-      href: 'https://docs.microsoft.com/samples/browse/?products=azure-cognitive-search&languages=csharp'
+      href: /samples/browse/?languages=csharp&products=azure-cognitive-search
     - name: Java 示例
-      href: 'https://docs.microsoft.com/samples/browse/?products=azure-cognitive-search&languages=java'
+      href: /samples/browse/?languages=java&products=azure-cognitive-search
     - name: JavaScript 示例
-      href: 'https://docs.microsoft.com/samples/browse/?products=azure-cognitive-search&languages=javascript'
+      href: /samples/browse/?languages=javascript&products=azure-cognitive-search
     - name: Python 示例
-      href: 'https://docs.microsoft.com/samples/browse/?products=azure-cognitive-search&languages=python'
+      href: /samples/browse/?languages=python&products=azure-cognitive-search
     - name: REST 示例
-      href: 'https://docs.microsoft.com/samples/browse/?languages=http&expanded=azure&products=azure-cognitive-search'
+      href: /samples/browse/?expanded=azure&languages=http&products=azure-cognitive-search
     - name: Azure Policy 内置策略定义
       displayName: 'samples, policies, definitions'
       href: ./policy-samples.md
@@ -406,25 +406,25 @@
     - name: .NET
       items:
         - name: 搜索 API
-          href: 'https://docs.microsoft.com/dotnet/api/overview/azure/search.documents-readme?view=azure-dotnet'
+          href: /dotnet/api/overview/azure/search.documents-readme?view=azure-dotnet
         - name: 管理 API
-          href: 'https://docs.microsoft.com/dotnet/api/overview/azure/search/management?view=azure-dotnet'
+          href: /dotnet/api/overview/azure/search/management?view=azure-dotnet
     - name: Java
       items:
         - name: 管理 API
-          href: 'https://docs.microsoft.com/java/api/overview/azure/search/management?view=azure-java-stable'
+          href: /java/api/overview/azure/search/management?view=azure-java-stable
     - name: JavaScript
       items:
         - name: 搜索 API
-          href: 'https://docs.microsoft.com/javascript/api/overview/azure/search-documents-readme?view=azure-node-latest'
+          href: /javascript/api/overview/azure/search-documents-readme?view=azure-node-latest
         - name: 管理 API
-          href: 'https://docs.microsoft.com/javascript/api/overview/azure/search/management?view=azure-node-latest'
+          href: /javascript/api/overview/azure/search/management?view=azure-node-latest
     - name: Python
       items:
         - name: 搜索 API
-          href: 'https://docs.microsoft.com/python/api/overview/azure/search-documents-readme?view=azure-python'
+          href: /python/api/overview/azure/search-documents-readme?view=azure-python
         - name: 管理 API
-          href: 'https://docs.microsoft.com/python/api/overview/azure/search/management?view=azure-python'
+          href: /python/api/overview/azure/search/management?view=azure-python
     - name: OData 语言参考
       items:
         - name: 概述
@@ -517,7 +517,7 @@
     - name: 培训
       items:
         - name: 简介 (Microsoft Learn)
-          href: 'https://docs.microsoft.com/learn/modules/intro-to-azure-search/'
+          href: /learn/modules/intro-to-azure-search/
         - name: 将搜索添加到应用 (Pluralsight)
           href: 'https://www.pluralsight.com/courses/azure-adding-search-abilities-apps'
         - name: 开发人员课程 (Pluralsight)
