--- a/articles/event-hubs/index.yml
+++ b/articles/event-hubs/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: spelluru
   ms.author: spelluru
   ms.date: 06/23/2020
-  ms.openlocfilehash: 15f484665a74b7960908d2b430210fe921c33d5d
-  ms.sourcegitcommit: 2ff0d073607bc746ffc638a84bb026d1705e543e
+  ms.openlocfilehash: 06cce3f999b329d41c7ef7e5f381f55fdaee8054
+  ms.sourcegitcommit: 62e1884457b64fd798da8ada59dbf623ef27fe97
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/06/2020
-  ms.locfileid: "87836779"
+  ms.lasthandoff: 08/26/2020
+  ms.locfileid: "88933743"
 landingContent:
 - title: 关于事件中心
   linkLists:
@@ -41,7 +41,7 @@ landingContent:
       url: event-hubs-quickstart-cli.md
     - text: Azure PowerShell
       url: event-hubs-quickstart-powershell.md
-    - text: Azure Resource Manager 模板
+    - text: Azure 资源管理器模板
       url: event-hubs-resource-manager-namespace-event-hub.md
 - title: 创建专用群集
   linkLists:
@@ -84,13 +84,13 @@ landingContent:
   - linkListType: quickstart
     links:
     - text: .NET Core
-      url: get-started-dotnet-standard-send-v2.md
+      url: event-hubs-dotnet-standard-getstarted-send.md
     - text: Java
       url: event-hubs-java-get-started-send.md
     - text: Python
-      url: get-started-python-send-v2.md
+      url: event-hubs-python-get-started-send.md
     - text: JavaScript
-      url: get-started-node-send-v2.md
+      url: event-hubs-node-get-started-send.md
     - text: Apache Kafka
       url: event-hubs-quickstart-kafka-enabled-event-hubs.md#send-and-receive-messages-with-kafka-in-event-hubs
     - text: Apache Storm（仅接收）
@@ -132,7 +132,7 @@ landingContent:
     - text: 使用 Resource Manager 模板
       url: event-hubs-resource-manager-namespace-event-hub-enable-capture.md
     - text: 从 Python 应用程序启用捕获
-      url: get-started-capture-python-v2.md
+      url: event-hubs-capture-python.md
 - title: 处理事件
   linkLists:
   - linkListType: tutorial
