--- a/articles/azure-arc/servers/toc.yml
+++ b/articles/azure-arc/servers/toc.yml
@@ -49,3 +49,9 @@
       items:
         - name: 代理连接问题
           href: troubleshoot-agent-onboard.md
+    - name: 参考
+      items:
+        - name: 区域可用性和数据驻留
+          href: data-residency.md
+        - name: REST
+          href: /rest/api/hybridcompute
